--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.2",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
